Closed Bug 540531 Opened 14 years ago Closed 14 years ago

Freeze the refresh driver in bfcached pages

Categories

(Core :: Layout, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file, 1 obsolete file)

This will mean we don't process restyles (and soon reflows) in them even if someone messes with content states, say.  I believe this is in fact desirable.
Attached patch Like so (obsolete) — Splinter Review
Attachment #422287 - Flags: review?(dbaron)
Freeze() and Thaw() should assert about the current state of mFrozen (not what they're setting it to).

I think Thaw() should synchronously do a refresh.  Or would synchronous be a problem?  If so, it should probably be immediately and not after the timer interval.

Other than that, I think this looks fine.
Comment on attachment 422287 [details] [diff] [review]
Like so

Marking review- to prompt response to comment above.
Sync is a problem in general due to it possibly running script.  I'll make it async and ASAP.
Attached patch Updated patchSplinter Review
Attachment #422287 - Attachment is obsolete: true
Attachment #423120 - Flags: review?(dbaron)
Comment on attachment 423120 [details] [diff] [review]
Updated patch

ok, r=dbaron
Attachment #423120 - Flags: review?(dbaron) → review+
Pushed http://hg.mozilla.org/mozilla-central/rev/5ea413d845bf
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: