Bug 540531.  Freeze the refresh driver when a page goes into bfcache.  r=dbaron